updated FoV-Subject Preview
fixed bug where target exceeded camera frame, added dimensions for chinook and apache

--- a/FoV-Subject Preview/index.css
+++ b/FoV-Subject Preview/index.css
@@ -32,7 +32,19 @@ body {
 }
 
 #defaultText{
-  margin: 1em;
+  margin: 0.1em;
+  padding: 0.2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#inTable{
+  text-align: right;
+}
+
+#inTable td{
+  padding: 0.1em;
 }
 
 #resTable {
